# Petridish

./: .gitignore  Cargo.toml  README.md  get_what_to_do.sh  testlib.py
doc/: ideas
example/benchmarking/: Cargo.toml  bbob.m  benchmark.py
example/benchmarking/src/: fcts.rs  lib.rs
example/simple_algo/: Cargo.toml  start_test.sh  unitest_py_iface.py
example/simple_algo/src/: lib.rs
search/: scores_logarithm.py
src/: algo.rs  algorithms.rs  builtin_algos.rs  cell.rs  dataset.rs  errors.rs  genalgo.rs  genalgo_lab.rs  genalgomethods.rs  lab.rs  labmaps.rs  lib.rs  py_iface.rs  utils.rs
src/algorithms/: algo_test.rs  benchmark_fcts.rs
src/builtin_algos/: algo_test.rs  benchmark_fcts.rs
src/genalgo_lab/: genalgo.rs  genalgomethods.rs
src/genalgo_lab/genalgomethods/: darwin_method.rs
src/genalgomethods/: darwin_method.rs  random_opti.rs
src/labmaps/: wheel.rs
tests/: unitest_py_iface.py
