[package]
name = "petridish"
version = "0.1.0"
authors = ["Litchipi <litchi.pi@protonmail.com>"]
edition = "2018"

[lib]
name = "petridish"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = {version = "1.0.118", features = ["derive"]}
serde_json = "1.0"
log = "0.4.11"
rand = "0.8.3"
rand_distr = "0.4.0"
paste = "1.0.5"
pyo3 = "0.13.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = 'abort'
