[package]
name = "benchmarking"
version = "0.1.0"
authors = ["litchipi <litchi.pi@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "benchmarking"
crate-type = ["cdylib"]

[dependencies]
petridish = {path = "../../"}
serde_json = "1.0"
rand = "0.8.3"
paste = "1.0.5"
rand_pcg = "0.3.0"
